new error handler interface compatibility